--- a/app/views/emailer/_upload.haml
+++ b/app/views/emailer/_upload.haml
@@ -2,6 +2,6 @@
   = t('.file')
   = link_to_upload(upload, upload.file_name)
   = t('.uploaded_by')
-  = link_to upload.user.name, user_url(upload.user)
+  = link_to h(upload.user.name), user_url(upload.user)
   - if upload.description
     = '(' + h(upload.description) + ')'
