--- a/app/views/emailer/forgot_password.haml
+++ b/app/views/emailer/forgot_password.haml
@@ -2,7 +2,7 @@
   %p{ :style => email_text(:small) }
     = t('emailer.common.do_not_answer')
 
-  %p= t('emailer.reset_password.hey', :user_name => @user.name)
+  %p= t('emailer.reset_password.hey', :user_name => h(@user.name))
 
   .box{ :style => email_box }  
     %p= t('emailer.reset_password.follow_the_link')
