--- a/app/views/layouts/public_projects.haml
+++ b/app/views/layouts/public_projects.haml
@@ -4,7 +4,7 @@
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     = csrf_meta_tag
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
-    %title= @title || @project || "Teambox public projects"
+    %title= @title || h(@project).presence || "Teambox public projects"
     = stylesheet_link_tag 'public_projects'
     = sprockets_include_tag
 
@@ -20,7 +20,7 @@
       .wrapper
         #header
           = link_to image_tag('teambox-logo.gif', :alt => 'Teambox logo', :style => 'float:right'), root_path
-          %h1= @project || "Public projects"
+          %h1= h(@project) || "Public projects"
           .clear
         .content
           - show_flash
