--- a/app/views/organizations/edit.haml
+++ b/app/views/organizations/edit.haml
@@ -1,4 +1,4 @@
-%h2= @organization
+%h2=h @organization
 
 %p= t('.public_site', :link => link_to(public_url_for_organization(@organization), public_url_for_organization(@organization)))
 
