--- a/app/views/shared/_header.m.haml
+++ b/app/views/shared/_header.m.haml
@@ -6,4 +6,4 @@
       %td{ :style => 'text-align: right' }
         %small
           Signed in as
-          = current_user
+          =h current_user
