--- a/app/views/shared/_watchers.m.haml
+++ b/app/views/shared/_watchers.m.haml
@@ -3,5 +3,5 @@
     = t('.nobody_watching')
   - else
     = t('.people_watching')
-    = target.watchers.to_sentence
+    = target.watchers.collect {|u| h(u) }.to_sentence
   = watch_link(project,user,target)
