--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -8,7 +8,7 @@
   - when 'show_tasks'
     = task_overview_box(@task)
 
-    %h2= link_to @task_list, [@task_list.project, @task_list]
+    %h2= link_to h(@task_list), [@task_list.project, @task_list]
     = sidebar_tasks(@task_list.tasks.unarchived)
 
   - when 'show_task_lists'
