--- a/app/views/tasks/new.m.haml
+++ b/app/views/tasks/new.m.haml
@@ -1,6 +1,6 @@
 %h2= t('.title')
 
-%p= @task_list
+%p=h @task_list
 
 - form_for [@current_project,@task_list,@task] do |f|
   = task_fields(f,@current_project,@task_list,@task)
