--- a/app/views/uploads/_upload.haml
+++ b/app/views/uploads/_upload.haml
@@ -1,10 +1,10 @@
 %div[upload]
   .info
-    - icon_path = "file_icons/48px/#{upload.file_type}.png"
+    - icon_path = "file_icons/48px/#{h upload.file_type}.png"
     - if Rails.root.join("public/images/#{icon_path}").exist?
       = link_to image_tag(icon_path), upload.url, :class => 'file_icon', :rel => (upload.image? ? 'facebox' : '')
     - else
-      = link_to upload.file_type, upload.url, :class => upload.file_type, :rel => (upload.image? ? 'facebox' : '')
+      = link_to h(upload.file_type), upload.url, :class => upload.file_type, :rel => (upload.image? ? 'facebox' : '')
   - unless rss?
     .date= posted_date upload.created_at
   .file
@@ -12,7 +12,7 @@
     == (#{number_to_human_size(upload.size)})
 
   - unless upload.description.blank?
-    .description&= upload.description
+    .description=h upload.description
     
   .reference
     = activity_title upload
