--- a/app/views/activities/_create_task.m.haml
+++ b/app/views/activities/_create_task.m.haml
@@ -1,9 +1,9 @@
 .activity
   = thumb_avatar(activity.user)
   .container
-    %span.user= activity.user.short_name
+    %span.user=h activity.user.short_name
     = t(".#{activity.action_type}")
-    = link_to task, project_task_list_task_path(task.project, task.task_list, task)
+    = link_to h(task), project_task_list_task_path(task.project, task.task_list, task)
     = activity_project_link(activity.project)
     .date
       = posted_date activity.posted_date
