--- a/app/views/activities/_create_task_list.m.haml
+++ b/app/views/activities/_create_task_list.m.haml
@@ -1,9 +1,9 @@
 .activity
   = thumb_avatar(activity.user)
   .container
-    %span.user= activity.user.short_name
+    %span.user=h activity.user.short_name
     = t(".#{activity.action_type}")
-    = link_to task_list, project_task_list_path(task_list.project, task_list)
+    = link_to h(task_list), project_task_list_path(task_list.project, task_list)
     = activity_project_link(activity.project)
     .date
       = posted_date activity.posted_date
