--- a/app/views/cards/_card.haml
+++ b/app/views/cards/_card.haml
@@ -5,30 +5,30 @@
       -for phone_number in card.phone_numbers
         .phone.item
           %span.type= phone_number.get_type
-          = phone_number.name
+          =h phone_number.name
   - unless card.email_addresses.empty?
     .email_addresses
       %h3= t('.email_addresses')
       -for email_address in card.email_addresses
         .email_address.item
           %span.type= email_address.get_type
-          = email_address.name
+          =h email_address.name
   - unless card.websites.empty?
     .websites
       %h3= t('.websites')
       -for website in card.websites
         .website.item
           %span.type= website.get_type
-          =link_to website.to_url, website.to_url, :target => '_blank'
+          =link_to h(website.to_url), website.to_url, :target => '_blank'
   - unless card.addresses.empty?
     .addresses
       %h3= t('.addresses')
       -for address in card.addresses
         .address.item
           %span.type= address.get_type
-          = address.street
+          =h address.street
           %br/
-          = "#{address.city} #{address.state}, #{address.zip}"
+          =h "#{address.city} #{address.state}, #{address.zip}"
           %br/          
           = t("countries.#{address.country}") unless address.country.blank?
   - unless card.ims.empty?
@@ -37,7 +37,7 @@
       -for im in card.ims
         .im.item
           %span.type="#{im.get_type} - #{im.get_im_type}"
-          = im.name
+          =h im.name
   - unless card.social_networks.empty?
     .social_networks
       %h3= t('.social_networks')
@@ -45,6 +45,6 @@
         .social_network.item
           %span.type= "#{social_network.get_network_type} - #{social_network.get_type}"
           - if social_network.to_url
-            = link_to social_network.name, social_network.to_url, :target => '_blank'
+            = link_to h(social_network.name), social_network.to_url, :target => '_blank'
           - else
-            = social_network.name
+            =h social_network.name
