--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -25,7 +25,7 @@
                   :'data-confirm' => t('.confirm_delete'), :'data-remote' => true, :class => :delete
       .body.textilized
         .before
-          = link_to(comment.user.name, comment.user, :class => :user) + " "
+          = link_to(h(comment.user.name), comment.user, :class => :user) + " "
           - if comment.task_comment?
             = comment_task_status(comment)
           - if comment.hours?
