--- a/app/views/emailer/_comment.haml
+++ b/app/views/emailer/_comment.haml
@@ -7,7 +7,7 @@
   .body{ :style => unread }
     %p{ :style => 'font-size: 12px' }
       %strong{ :style => 'color: rgb(50,50,50);' }
-        = comment.user.name + ', '
+        = h(comment.user.name) + ', '
       %span{ :style => 'color: rgb(150,150,150);' }
         = I18n.l(comment.created_at.in_time_zone(@recipient.time_zone), :format => "%b %d &mdash; %I:%M %p")
       ~ comment.body_html
