--- a/app/views/emailer/_tasks_for_daily_reminder.haml
+++ b/app/views/emailer/_tasks_for_daily_reminder.haml
@@ -10,5 +10,5 @@
           - if task.due_on
             %span{ :style => task_due_on_style(task) }
               = due_on(task) if task.due_on
-          = link_to task.name, project_task_list_task_url(task.project, task.task_list, task)
-          == [#{link_to task.project, task.project}]
+          = link_to h(task.name), project_task_list_task_url(task.project, task.task_list, task)
+          == [#{link_to h(task.project), task.project}]
