--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -4,16 +4,16 @@
 
   %p{ :style => email_text(:normal) }
     = t('emailer.notify.project')
-    = link_to(@project.name, project_url(@project)) + '. '
+    = link_to(h(@project.name), project_url(@project)) + '. '
     = t('emailer.notify.task_list')
-    = link_to(@task_list.name, project_task_list_url(@project, @task_list))
+    = link_to(h(@task_list.name), project_task_list_url(@project, @task_list))
 
   .box{ :style => email_box(@task) }
     %h2{ :style => email_text(:big) }
       = t('emailer.notify.task')
-      = link_to @task.name, project_task_list_task_url(@project, @task_list, @task)
+      = link_to h(@task.name), project_task_list_task_url(@project, @task_list, @task)
     - if @task.assigned
-      %p= t('emailer.notify.assigned_to', :user => @task.assigned.user.name)
+      %p= t('emailer.notify.assigned_to', :user => h(@task.assigned.user.name))
     %p= t('emailer.notify.status', :status => localized_status_name(@task))
     - if @task.due_on
       %p= t('emailer.notify.due_on', :date => due_on(@task))
@@ -27,7 +27,7 @@
 
   .footer{ :style => email_text(:small) }
     %p
-      = @task.watchers.to_sentence
+      = @task.watchers.collect {|u| h(u) }.to_sentence
       = t('emailer.notify.are_watching')
     = emailer_commands_for_tasks(@recipient)
     %p
