--- a/app/views/layouts/sites.haml
+++ b/app/views/layouts/sites.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
-    %title= @organization
+    %title=h @organization
     = stylesheet_link_tag 'sessions', 'sites'
     = sprockets_include_tag
 
