--- a/app/views/organizations/_organization.haml
+++ b/app/views/organizations/_organization.haml
@@ -1,6 +1,6 @@
 .organization
   %h3
-    = link_to organization.name, organization
+    = link_to h(organization.name), organization
     - role = current_user.memberships.find_by_organization_id(organization.id).role_name
     %span= t('.you_are', :role => t(".#{role}"))
   %img.logo{ :src => organization.logo.url(:square) }
