--- a/app/views/organizations/external_view.haml
+++ b/app/views/organizations/external_view.haml
@@ -1,4 +1,4 @@
-%h2= t('.title', :name => @organization)
+%h2= t('.title', :name => h(@organization))
 
 %p= t('.you_cant_access')
 - unless Teambox.config.community
@@ -13,7 +13,7 @@
     - @organization.admins.each do |user|
       %p.user
         = micro_avatar(user)
-        = link_to user, user
+        = link_to h(user), user
         .clear
 
 - content_for :column do
