--- a/app/views/pages/_page.haml
+++ b/app/views/pages/_page.haml
@@ -1,6 +1,6 @@
 .page
   %h3= page_link(page)
-  %p= page.description
+  %p=h page.description
   - if page.slots.any?
     - groups = page.divided_slots
     - groups.each do |group|
