--- a/app/views/people/contacts.haml
+++ b/app/views/people/contacts.haml
@@ -2,7 +2,7 @@
   %ol
     = list_of @contacts do |user|
       = micro_avatar user
-      = link_to user.name, user
+      = link_to h(user.name), user
 
 - else
   %p= t('people.column.no_contacts')
