--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -10,7 +10,7 @@
         - for user in contacts[0,60]
           %label.user
             = check_box_tag 'project[invite_users][]', user.id
-            &= user.name
+            =h user.name
     .clear
     %p.invite_by_email
       = t('.invite_by_email')
