--- a/app/views/public/comments/_comment.haml
+++ b/app/views/public/comments/_comment.haml
@@ -2,7 +2,7 @@
   .avatar= thumb_avatar(comment.user)
   .body
     %h3
-      = comment.user
+      =h comment.user
       %span== Posted #{time_ago_in_words(comment.updated_at)} ago
     .textilized
       ~ comment.body_html
