--- a/app/views/public/projects/show.haml
+++ b/app/views/public/projects/show.haml
@@ -16,14 +16,14 @@
     - for page in @project.pages
       .page
         .icon
-        = link_to page, public_project_page_path(@project, page), :class => :page
+        = link_to h(page), public_project_page_path(@project, page), :class => :page
         .clear
 
 .conversations
   %h2 Recent conversations
   - for conversation in @recent_conversations
     .conversation
-      = link_to conversation, seo_public_project_conversation_path(@project, conversation), :class => :conversation
+      = link_to h(conversation), seo_public_project_conversation_path(@project, conversation), :class => :conversation
       %span
         == #{pluralize(conversation.comments_count, "message", "messages")},
         == last one #{time_ago_in_words(conversation.updated_at)} ago
@@ -36,9 +36,9 @@
   %p You can suggest or work on tasks from this project. You can also look up existing tasks and comment on them.
   - for task_list in @project.task_lists
     %p.task_list
-      %b= link_to(task_list, project_task_list_path(@project, task_list)) + ":"
+      %b= link_to(h(task_list), project_task_list_path(@project, task_list)) + ":"
       - tasks = task_list.tasks.all(:select => 'id, name', :order => 'id desc', :limit => 5)
-      - tasks = tasks.collect { |task| link_to task, project_task_list_task_path(@project, task_list, task) }
+      - tasks = tasks.collect { |task| link_to h(task), project_task_list_task_path(@project, task_list, task) }
       = tasks.join(", ") + (tasks.size == 5 ? ", ..." : "")
   
 
