--- a/app/views/reset_passwords/sent.haml
+++ b/app/views/reset_passwords/sent.haml
@@ -1,5 +1,5 @@
 %h2= t('.title')
 
 - form_tag '' do
-  %p= t('.login_link_sent', :email => params[:email]) 
+  %p= t('.login_link_sent', :email => h(params[:email])) 
   %p= t('.follow_the_link')
