--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,7 +1,7 @@
 #report
   %h1
     - if @current_project
-      = t('.title_in_project', :project => @current_project.name)
+      = t('.title_in_project', :project => h(@current_project))
     - else
       = t('.title')
 
@@ -10,7 +10,7 @@
     = submit_tag(@comments ? t('.search_again') : t('search.submit'), :name => nil)
 
 - if @comments
-  %h2= t('.report', :count => @comments.total_entries, :term => @search_terms)
+  %h2= t('.report', :count => @comments.total_entries, :term => h(@search_terms))
   
   #results= render @comments
 
