--- a/app/views/shared/_submit_or_cancel.haml
+++ b/app/views/shared/_submit_or_cancel.haml
@@ -1,6 +1,6 @@
 = loading_image(loading_id)
 
 .submit{ :id => submit_id }
-  = submit_tag name, :class => (object.new_record? ? "inline_form_create" : "inline_form_update")
+  = submit_tag h(name), :class => (object.new_record? ? "inline_form_create" : "inline_form_update")
   = t('common.or')
   = link_to t('form.cancel'), "#", :class => (object.new_record? ? "inline_form_create_cancel" : "inline_form_update_cancel")
