--- a/app/views/tasks/_task.m.haml
+++ b/app/views/tasks/_task.m.haml
@@ -6,10 +6,10 @@
       = task_status(task,:content)
     .taskName{ :class => "task_item_#{task.status_name}"}
       %span.status= localized_status_name(task)
-      = link_to task, project_task_list_task_path(project,task_list,task), :class => :name
+      = link_to h(task), project_task_list_task_path(project,task_list,task), :class => :name
       - unless (task.due_on.nil? && task.unassigned?) || task.closed?
         %span.assigned
           = due_on(task) if task.due_on
           = "-" unless task.assigned.nil? || task.due_on.nil?
-          = link_to task.assigned.short_name, user_path(task.assigned.user) if task.assigned
+          = link_to h(task.assigned.short_name), user_path(task.assigned.user) if task.assigned
     .clear
